Fixes spacing on hamburger additional info links

--- a/src/components/navigation/hamburgerMenu/hamburgerMenu.scss
+++ b/src/components/navigation/hamburgerMenu/hamburgerMenu.scss
@@ -153,4 +153,8 @@ ul {
 #ham-collapse-ul {
 	padding-top: 0;
 	padding-left: 0;
+
+	.ham-add-info-link {
+		padding-bottom: 0.5em;
+	}
 }
